tracktivityPetsWebsite/static/tracktivityPetsWebsite/style/style.css
/* ... */
#pawprints {
	position: relative;
    margin: 30px auto;
    max-width: 75%;
}

#signupLink:hover {
    text-decoration: none;
}

@media (max-width: 910px) {
    .navbar-header {
        float: none;
    }
    .navbar-left,.navbar-right {
        float: none !important;
    }
    .navbar-toggle {
        display: block;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-fixed-top {
        top: 0;
        border-width: 0 0 1px;
    }
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar-nav {
        float: none!important;
        margin-top: 7.5px;
    }
    .navbar-nav>li {
        float: none;
    }
    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .collapse.in{
        display:block !important;
    }
}

.modal-footer {
    text-align: center;
}

#feedbackBtn {
    margin-top: 10px;
}

#pet_scene_container
{
	padding: 2px;
	width: 100%;
	height: 100%;
	background: linear-gradient( rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2) ), url("/static/tracktivityPetsWebsite/images/petscene_background.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 90%;
}

#pet_scene
{
	position: relative;
	/*width: 100px;*/
    height: 300px;
    padding 0;
}

#petinfo
{
	top: 0;
    left: 0;
	z-index: 2;
	text-align: left;
	position: absolute;
	width: 100%;
	height: 100%;
}

/******************************************************************* Progress bar style stuff ***************************************************************/

#pet_progress
{
    margin-top: 10px;
    margin-bottom: 2px;
    border: 1px solid black;
}

.progress {
    height: 35px;
}

.progress-bar {
    font-size: 16px;
    line-height: 30px;
}

#progressbar {
    margin-top: 30%;
}
/**************************************************************************************************************************************************************/

#pet_phrase
{
	margin-bottom: 2px;
}

#infoRow>div
{
	padding: 10px;
}

.infoItem
{
	//background: #eee;
	background:url('/static/tracktivityPetsWebsite/images/clouds.jpg');
	height: 100%;
	border-radius: 8px;
	padding-top: 0.5px;
	border: 1px solid black;
}

.infoItem h3, #pet_selector_title
{
	border-radius: 8px 8px 0px 0px;
	color: white;
	background: #00002B;
	margin: 3px;
}

#feedbackComment {
    border: 1px solid black;
}

.carousel-content {
    color:black;
    display:flex;
    align-items:center;
    margin: 20px;
}
		
.carousel-control.left, .carousel-control.right {
    background-image: none
}

.carousel-control{
  color: #000;
}			

#fitbitlinkmessage
{
	padding-right: 40px;	
	padding-left: 40px;	
}

.centre
{
	float:none;
	margin-right: auto;
	margin-left: auto;
}

#fitbitlinkmessage h3
{
	margin-bottom: 30px;
}

#petSelectionContainer, #pet_content
{
	padding-left: 0px;
	padding-right: 0px;
	
	background: linear-gradient( rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2) ), url("/static/tracktivityPetsWebsite/images/pet_selection_background.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 50% 60%;
}

#petSelectionContainer
{
	width: 100%;
}

#pet_content
{
	color: white;
}

.bottomBox {
	border-radius: 25px;
  	background-color: #ffffff;
    border: 1px solid black;
	margin: 30px;
    padding: 4px; 
    height: 530px;
}

.bubble 
{
    position: relative;
    height: 120px;
    padding: 0px;
    background: #FFFFFF;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    border: #000000 solid 3px;
}

.bubble:after 
{
    content: '';
    position: absolute;
    border-style: solid;
    border-width: 15px 15px 0;
    border-color: #FFFFFF transparent;
    display: block;
    width: 0;
    z-index: 1;
    margin-left: -15px;
    bottom: -15px;
    left: 50%;
}

.bubble:before 
{
    content: '';
    position: absolute;
    border-style: solid;
    border-width: 17px 17px 0;
    border-color: #000000 transparent;
    display: block;
    width: 0;
    z-index: 0;
    margin-left: -17px;
    bottom: -20px;
    left: 50%;
}
 
.bottom {
	left: 10%;
    border-color: #c8c8c8 transparent transparent transparent;
    border-width: 8px 8px 0px 8px;
    bottom: -8px;
}

.bottom:after {
	left: 10%;
    border-color: #f8f8f8 transparent transparent transparent;
    border-style: solid;
    border-width: 7px 7px 0px 7px;
    bottom: 1px;
    content: "";
    position: absolute;
    left: -7px;
}

#petselectionCarouselArrows
{
	position: absolute;
	  top: 50%;
	  transform: translateY(-50%);
}

#petselectionCarouselArrows > .row > img
{
	opacity: 0.7;
}

#petselectionCarouselArrows .row
{
	margin-left: 0px;
	margin-right: 0px;
}

#visible_pets 
{
	margin-left: 0px;
	margin-right: 0px;
	position: relative;
}

.bubbletext_header {
    margin-bottom: 30px;
}

.dashboard_bubbletext {
    margin-top: 10px;
    margin-bottom: 10px;
}

#petSpeech {
    margin-top: 30px;
    font-size: 24px
}

#pet_scene_filler {
    margin-top: 150px;
}

#petInfoProgress {
    background-color: #666;
    border-radius: 8px;
    border: 1px solid black;
}

#infoTable {
    font-size: 24px;
    color: white;
    margin-top: 10px;
    margin-bottom: 15px;
}

#infoTable td {
    padding-left: 20px;
}

#pet_content p
{
	background: #eee;
	padding: 3px;
	color: black;
}

#adoptPetForm
{
	padding: 10px;
	margin-top:10px;
	margin-bottom:10px;
	border-radius: 8px;
	background: #eee;
	border: 1px solid black;
}

/*********************************************************************** Inventory, Store and Challenges Pages Style ******************************************************/

.nav-tabs > li > a {
    /* Override default Bootstrap tab style */
    background: #DADADA;
}

.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li > a:hover, {
    background: white;
    border: 1px solid white;
}
/* ... */

